--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,14 @@
   text-align: center;
 }
 
+.title {
+  font-family: "Dancing Script";
+  font-weight: bold;
+}
+.log-button {
+  color: red;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
